--- a/templates/app1/division_detail.html
+++ b/templates/app1/division_detail.html
@@ -11,12 +11,12 @@
         </div>
 
 
-        {% if user.is_authenticated %}
-            <div class="gp-center">
-                <a href="{% url 'add_page' %}" class="btn btn-lg btn-primary">Add a new Place to this
-                    Division</a>
-            </div>
-        {% endif %}
+{#        {% if user.is_authenticated %}#}
+{#            <div class="gp-center">#}
+{#                <a href="{% url 'add_page' %}" class="btn btn-lg btn-primary">Add a new Place to this#}
+{#                    Division</a>#}
+{#            </div>#}
+{#        {% endif %}#}
 
         <div class="container-fluid gp-container-normal">
             <div class="gp-center">
